--- a/html/css/app.css
+++ b/html/css/app.css
@@ -206,6 +206,18 @@ i {
 	margin-top: -23px;
 }
 
+
+.input-field[type="textarea"],
+textarea.input-field {
+	min-height: 120px;
+	max-height: 200px;
+	resize: vertical;
+	line-height: 1.4;
+	padding: 15px 20px;
+	white-space: pre-wrap;
+	word-wrap: break-word;
+}
+
 .arrows-text-slider {
 	display: flex;
 	align-items: center;
